comment out conflicting library

--- a/styles/phdbyphd.sty
+++ b/styles/phdbyphd.sty
@@ -616,7 +616,7 @@
 \RequirePackage[scaled=.85]{beramono} % Monospace font
 \RequirePackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
 \RequirePackage{amsfonts} % Mathematical fonts
-\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
+%\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
 %\fi
 
 %\setstretch{1.10}
